client repostiory interface